--- a/Modili 15/style.css
+++ b/Modili 15/style.css
@@ -63,3 +63,99 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
 }
+#horizontal-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: blue;
+
+}
+ 
+#horizontal-menu li {
+    float: left;
+}
+
+#horizontal-menu li a {
+    display: block;
+    color: aqua;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+}
+
+#horizontale-menu li a:hover:not(.active){
+    background-color: black;
+}
+
+.active{
+    background-color: blue;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: black;
+    font-family: Arial, Arial, Helvetica, sans-serif;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: #000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    color: #000;
+    padding: 14px 16px;
+    background-color: aqua;
+    font: inherit ;
+    margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    display: none;
+    position: absolute;
+    background-color: chocolate;
+    width: 100%;
+    left: 0;
+    box-shadow: 0px 8px 16px 0px rgba (0, 0, 0, 2);
+    z-index: 1;
+
+}
+
+.dropdown:hover  .dropdown-content {
+    display: block;
+}
+
+.column {
+    float: left;
+    width: 33%;
+    padding: 10px;
+    background-color: purple;
+    height: 250px;|
+
+}
+
+.column a {
+    float: none;
+    color: blue;
+    padding: 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.column a:hover {
+background-color:yellow;
+}
