--- a/Modili 15/style.css
+++ b/Modili 15/style.css
@@ -159,3 +159,34 @@ li a {
 .column a:hover {
 background-color:yellow;
 }
+  
+
+#vertical-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    background-color: aqua;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+
+}
+
+#vertical-menu li a {
+    display: block;
+    color: darkgreen;
+    padding: 8px 16px;
+    text-decoration: none;
+
+}
+ 
+#vertical-menu li a,.active {
+    background-color: darkorange;
+    color: hotpink;
+}
+
+#vertical-menu li a:hover:not(.active) {
+  background-color: cadetblue;
+  color: darkgreen;
+}
