--- a/moduli 17/style.css
+++ b/moduli 17/style.css
@@ -78,3 +78,52 @@ h2::before {
     color: red;
     margin:10px;
 }
+
+#example-one {
+    margin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50px;
+    background-color: yellow;
+}
+
+#example-two {
+    margin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50px;
+    border: 3px solid blue;
+}
+
+#example-three {
+    margin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50px;
+    background: url(.//3.jfif);
+}
+
+#example-four {
+    margin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 5px 60px 5px;
+    background:purple;
+}
+
+#example-five {
+    argin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 10px/60px;
+    background: violet;
+}
+
+#example-six {
+    argin: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 60px/10px;
+    background: green;
+}
+
