--- a/moduli 20/style.css
+++ b/moduli 20/style.css
@@ -38,3 +38,144 @@ nav ul li.active {
     background-color: blueviolet;
     border-radius: 5px;
 }
+
+.main-heading {
+    margin-top: 148px;
+    text-align: center;
+}
+
+.main-heading h1 {
+    color: white;
+    font-size: 42px;
+    font-weight: bold;
+    margin-bottom: 60px;
+}
+
+.main-heading a {
+    text-decoration: none;
+    background-color: brown;
+    font-size: 18px;
+    text-transform: uppercase;
+    border-radius: 5px;
+    padding: 25px 85px;
+    color: black;
+}
+
+#section-2 {
+    background-color: aqua;
+    main-height:745px;
+    color: black;
+}
+
+.title-box {
+    text-align: center;
+    max-width: 609px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.title-box h2 {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding-top: 100px;
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.title-box .line {
+    width: 87px;
+    height: 4px;
+    background-color: black(0, 0, 0, 0.15);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.services-box {
+    margin-top: 80px;
+    display: flex;
+    margin-left: auto;
+    margin-left: auto;
+    width: 90%;
+    padding-bottom: 100px;
+}
+
+
+.services {
+    width: 24%;
+    margin-left: bold;
+    font-size: 24px;
+    font-weight: 100;
+    
+
+}
+
+.form-row {
+    display: flex;
+}
+
+input[type="text"], input[type="email"], textarea {
+    width: 46%;
+    height: 56px;
+
+}
+
+input[type="text"], input[type="email"], textarea {
+    color: black;
+    background-color:  white;
+    border: none;
+    font-size: 18px;
+    margin: 16px;
+    border-radius: 5px;
+    padding-left: 28px;
+}
+
+textarea {
+    height: 200px;
+    width: 100px;
+    padding-top 26px;
+
+
+}
+
+
+input[type="submit"] {
+    background-color: darkseagreen;
+    border: none;
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    margin-top: 60px;
+}
+
+.big-button {
+    padding: 26px 85px;
+    color: blue;
+}
+footer {
+    background-color: blueviolet;
+}
+
+.footer-links {
+    max-height: 945px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer ul {
+    margin: 0;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+}
+
+.footer-links ul il {
+    display: inline-block;
+    padding: 10px 20px 10px 20px;
+}
+
+
+
