--- a/moduli 21/Projekti/style.css
+++ b/moduli 21/Projekti/style.css
@@ -9,7 +9,8 @@ body{
 
 #section-1{
 	background-color: #87509c;
-	height: 600px;
+	height: 600px
+    ;
 }
 
 .container{
@@ -221,7 +222,25 @@ footer ul {
  
     }
 
-@media only screen and (max-width: 800px) {
+
+
+    @media only screen and (max-width: 800px){
+
+        header{
+            flex-direction: column;
+        }
+    
+        nav ul li{
+          width: 100%;
+          text-align: center;
+        
+        }
+    
+        header img{
+            margin-left: auto;
+            margin-right: auto;
+     
+        }
 
     header {
         flex-direction: column;
@@ -236,4 +255,5 @@ footer ul {
         margin-left: auto;
         margin-right: auto;
      }
-}
+
+    
