--- a/Personal Project/style.css
+++ b/Personal Project/style.css
@@ -69,54 +69,55 @@ nav ul li a:hover {
   font-size: 15px;
 }
 
-/* Services Section */
-#services {
-  background-color: #f4f4f4;
-  padding: 60px 20px;
-  text-align: left;
+#section-2 {
+  background-color: #17c2a4;
+  min-height: 745px;
+  color: white;
 }
 
-#services h2 {
-  margin-bottom: 20px;
-  font-size: 50%;
+.title-box {
+  text-align: center;
+  max-width: 609px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
-.service-cards {
+.title-box h2 {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding-top: 100px;
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.title-box .line {
+  width: 87px;
+  height: 4px;
+  background-color: rgba(0, 0, 0, 0.15);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.services-box {
+  margin-top: 80px;
   display: flex;
-  justify-content: space-around;
-  gap: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 90%;
+  padding-bottom: 100px;
+
 }
 
-.service-card {
-  background-color: #fff;
-  padding: 20px;
-  width: 30%;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.service {
+  width: 24%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
-.service-card h3 {
-  margin-bottom: 25px;
-  color:black;
-  background-image:url(6.jpg) ;
-  background-size: cover;
-}
 
-.service-card p {
-  color: #555;
-}
-
-/* About Section */
-#about {
-  padding: 60px 20px;
-  background-color: black;
-  text-align: right;
-}
-
-#about p {
-  color: #333;
-  max-width: 80px;
-  margin: 20px auto;
-}
 
 /* Contact Section */
 #contact {
@@ -156,6 +157,124 @@ nav ul li a:hover {
 #contact form button:hover {
   background-color: grey;
 }
+
+/* General Styling */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+}
+
+header .logo {
+  text-align: center;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 30px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+nav ul li {
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+}
+
+nav ul li a:hover {
+  color: #f4f4f4;
+}
+
+/* About Section */
+.about {
+  background-color: #fff;
+  padding: 50px 0;
+  text-align: center;
+}
+
+.about h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.about p {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+/* Team Section */
+.team {
+  background-color: #eaeaea;
+  padding: 50px 0;
+  text-align: center;
+}
+
+.team h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.team-member {
+  display: inline-block;
+  margin: 20px;
+  text-align: center;
+}
+
+.team-member img {
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.team-member h3 {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.team-member p {
+  font-size: 18px;
+  color: #666;
+}
+
+/* Footer */
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+}
+
+footer p {
+  font-size: 14px;
+}
+
 
 /* Footer Styles */
 footer {
